--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,28 +11,52 @@ body{
     color: white;
     align-items: center;
     border-radius: 10px;
+    justify-content: center;
+}
+
+.links {
+    padding: 30px;
+    flex-grow: 15;
+    font-size: 16px;
+    margin: 10px;
+    width: fit-content;
+    background-color: brown;
+    border-radius: 100px;
+
     
 }
+.links li {
+    list-style-type: none;
+
+    
+}
+
 .links a{
-    padding: 30px;
-    flex-grow: 6;
-    margin: 20px;
-    text-decoration: none;
-    font-size: 20px;
     color: white;
-    width: fit-content;
+    text-decoration: none;
+    float: right;
+    margin-right: 70px;
+    margin-bottom: 10px;
     
 }
 .links a:hover{
-    background-color: darkcyan;
+    background-color: aquamarine;
+    color: black;
 }
-.links{
-    margin-left: 500px;
-}
+/*
+@media screen and (max-width: 780px) {
+    .links{ margin-left: 50px;}
+    .tx{margin-left: 50px;}
+}*/
 .name{
-    margin-left: 100px;
+    margin-left: 50px;
     font-size: 35px;
+    flex-grow: 3;
+    
+    
 }
+
+
 .int{
     background-color: azure;
 }
@@ -65,12 +89,13 @@ video{
 }
 .footer{
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     background-color: black;
     border-radius: 50px;
 }
-.tx{
-    margin-left: 500px;
+.tx h2,p{
+    margin-left: 100px;
 }
+
 
 
